task-8: add multicreate and update endpoints
