# internal/api/request.go
@@ -5,6 +5,7 @@ import (
 	"errors"
 	"github.com/ozoncp/ocp-request-api/internal/models"
 	repository "github.com/ozoncp/ocp-request-api/internal/repo"
+	"github.com/ozoncp/ocp-request-api/internal/utils"
 	desc "github.com/ozoncp/ocp-request-api/pkg/ocp-request-api"
 	"github.com/rs/zerolog/log"
 	"google.golang.org/grpc/codes"
@@ -12,13 +13,14 @@ import (
 )
 
 // NewRequestApi creates Request API instance
-func NewRequestApi(r repository.Repo) *RequestAPI {
-	return &RequestAPI{repo: r}
+func NewRequestApi(r repository.Repo, batchSize uint) *RequestAPI {
+	return &RequestAPI{repo: r, batchSize: batchSize}
 }
 
 type RequestAPI struct {
 	desc.UnimplementedOcpRequestApiServer
-	repo repository.Repo
+	repo      repository.Repo
+	batchSize uint // batch size for multi create
 }
 
 // ListRequestV1 returns a list of user Requests
@@ -100,19 +102,66 @@ func (r *RequestAPI) CreateRequestV1(ctx context.Context, req *desc.CreateReques
 	}
 }
 
+// MultiCreateRequestV1  Creates new Request and returns its new ID
+func (r *RequestAPI) MultiCreateRequestV1(ctx context.Context, req *desc.MultiCreateRequestV1Request) (*desc.MultiCreateRequestV1Response, error) {
+	log.Printf("Got multi create request: %v", req)
+	if err := req.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	toCreate := make([]models.Request, 0, len(req.Requests))
+
+	for _, req := range req.Requests {
+		toCreate = append(toCreate, models.NewRequest(0, req.UserId, req.Type, req.Text))
+	}
+
+	newIds := make([]uint64, 0, len(req.Requests))
+
+	for _, batch := range utils.SplitToBulks(toCreate, r.batchSize) {
+		ids, err := r.repo.AddMany(ctx, batch)
+		if err != nil {
+			log.Error().Msgf("Failed to save requests failed with %v", err)
+			return nil, err
+		}
+		newIds = append(newIds, ids...)
+	}
+	return &desc.MultiCreateRequestV1Response{
+		RequestIds: newIds,
+	}, nil
+}
+
 // RemoveRequestV1  removes Request by its ID
 func (r *RequestAPI) RemoveRequestV1(ctx context.Context, req *desc.RemoveRequestV1Request) (*desc.RemoveRequestV1Response, error) {
 	log.Printf("Got remove request: %v", req)
 	if err := req.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
-	if found, err := r.repo.Remove(ctx, req.RequestId); err != nil {
+	err := r.repo.Remove(ctx, req.RequestId)
+	if errors.Is(err, repository.NotFound) {
+		return nil, status.Error(codes.NotFound, "request does not exist")
+	} else if err != nil {
 		log.Error().Msgf("Request %v failed with %v", req, err)
 		return nil, err
-	} else {
-		return &desc.RemoveRequestV1Response{
-			Found: found,
-		}, nil
-
 	}
+
+	return &desc.RemoveRequestV1Response{}, nil
+}
+
+// UpdateRequestV1 updates request data
+func (r *RequestAPI) UpdateRequestV1(ctx context.Context, req *desc.UpdateRequestV1Request) (*desc.UpdateRequestV1Response, error) {
+	log.Printf("Got update request: %v", req)
+	if err := req.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+	err := r.repo.Update(
+		ctx, models.NewRequest(req.RequestId, req.UserId, req.Type, req.Text),
+	)
+	if errors.Is(err, repository.NotFound) {
+		return nil, status.Error(codes.NotFound, "request does not exist")
+	} else if err != nil {
+		log.Error().Msgf("Request %v failed with %v", req, err)
+		return nil, err
+	}
+
+	return &desc.UpdateRequestV1Response{}, nil
 }
